--- a/estilos.css
+++ b/estilos.css
@@ -6,6 +6,25 @@
     align-items: center;
     height: 200vh;
 }
+/* Define la animación para el fondo */
+@keyframes move {
+    0% { background-position: 0% 0%; }
+    100% { background-position: 100% 100%; }
+  }
+  
+  /* Aplica estilos para el fondo animado */
+  .background {
+    /* Otros estilos para el fondo */
+    position: fixed; /* Para que el fondo esté fijo en la ventana */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Coloca el fondo en el fondo de la pila de capas */
+    background: linear-gradient(to right bottom, rgb(255, 0, 85), rgb(250, 250, 250), rgb(255, 0, 76), rgb(255, 255, 255), rgb(255, 0, 119), rgb(255, 255, 255));
+    background-size: 300% 300%; /* Tamaño del gradiente */
+    animation: move 15s linear infinite; /* Asocia la animación con el fondo */
+  }
 #logo {
     max-width: 800px;
     margin: 2px auto;
@@ -51,6 +70,24 @@
     margin-bottom: 10px; /* Mueve la imagen hacia abajo */
     margin-right: -50px; /* Mueve la imagen hacia la derecha */
 }
-.productos{
-    font-family: Arial, sans-serif; /* Cambia la tipografía del texto */
+#productos{
+    font-family: serif; /* Cambia la tipografía del texto */
+    font-weight: bold; /* Pone el texto en negrita */
+    font-size: 33px; /*cambiar el tamaño de letra de texto*/
+    color: rgb(255, 255, 255); /*cambiar el color de letra de texto*/
+    background-color: rgb(0, 0, 0); /* Color del fondo (rectángulo blanco) */
+    border-radius: 5px; /* Agrega esquinas redondeadas */
+    padding: 8px 15px; /* Agrega padding alrededor del texto */
+    margin: 15px 0px;
+}
+/*anuncio publicitario*/
+.ad-container {
+  width: 300px; /* Ancho del contenedor del anuncio */
+  height: 250px; /* Alto del contenedor del anuncio */
+  border: 1px solid #ccc; /* Borde para el contenedor del anuncio */
+  overflow: hidden; /* Para evitar que la imagen se desborde del contenedor */
+}
+.ad-container img {
+  width: 100%; /* Para asegurar que la imagen se ajuste al contenedor */
+  height: auto; /* Para mantener la proporción de aspecto de la imagen */
 }
