--- a/estilos.css
+++ b/estilos.css
@@ -3,6 +3,16 @@
 body {
   margin: 0; /* Elimina el margen predeterminado del cuerpo */
 }
+body {
+  background-image: url('fon1.jpg'); /* Ruta de tu imagen */
+  background-size: cover; /* Ajusta el tamaño de la imagen para cubrir toda la pantalla */
+  background-position: center; /* Centra la imagen en la pantalla */
+  /* Otras propiedades opcionales para el fondo */
+  /* background-repeat: no-repeat; */ /* Para evitar que la imagen se repita */
+  /* background-attachment: fixed; */ /* Para que la imagen de fondo se mantenga fija mientras se desplaza la página */
+  /* color: white; */ /* Cambia el color del texto para que sea legible */
+}
+
 
 /* Estilos para .leaf */
 
