--- a/estilos.css
+++ b/estilos.css
@@ -22,7 +22,7 @@ body {
 /* Aplica estilos para el fondo animado */
 .background {
   /* Otros estilos para el fondo */
-  position: fixed; /* Para que el fondo esté fijo en la ventana */
+  /* position: fixed; /* Para que el fondo esté fijo en la ventana */
   top: 0;
   left: 0;
   width: 100%;
