--- a/estilos.css
+++ b/estilos.css
@@ -1,21 +1,59 @@
-/* Estilos generales */
-
-body {
-  margin: 10%; /* Elimina el margen predeterminado del cuerpo */
-}
-body {
-  background-image: url('fon1.jpg'); /* Ruta de tu imagen */
-  background-size: cover; /* Ajusta el tamaño de la imagen para cubrir toda la pantalla */
-  background-position: center; /* Centra la imagen en la pantalla */
-  /* Otras propiedades opcionales para el fondo */
-  /* background-repeat: no-repeat; */ /* Para evitar que la imagen se repita */
-  /* background-attachment: fixed; */ /* Para que la imagen de fondo se mantenga fija mientras se desplaza la página */
-  /* color: white; */ /* Cambia el color del texto para que sea legible */
+html {
+  height:100%;
 }
 
+body {
+  margin:0;
+}
 
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
+.content {
+  background-color:rgba(255,255,255,.8);
+  border-radius:.25em;
+  box-shadow:0 0 .25em rgba(0,0,0,.25);
+  box-sizing:border-box;
+  left:50%;
+  padding:10vmin;
+  position:fixed;
+  text-align:center;
+  top:50%;
+  transform:translate(-50%, -50%);
+}
+
+h1 {
+  font-family:monospace;
+}
+
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
+}
+/* Cuerpo */
 /* Estilos para .leaf */
-
 .leaf {
   display: flex;
   flex-direction: column;
