--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 html {
-  height:100%;
+  height:200%;
 }
 
 body {
@@ -8,7 +8,7 @@ body {
 
 .bg {
   animation:slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  background-image: linear-gradient(-60deg, rgb(255, 255, 255) 50%, rgb(255, 0, 200) 50%);
   bottom:0;
   left:-50%;
   opacity:.5;
