--- a/estilos.css
+++ b/estilos.css
@@ -2,6 +2,7 @@ body {
   background-color: #111111;
   margin: 0;
   overflow-x: hidden;
+  position: relative; /* Agrega posicionamiento relativo para los elementos hijos */
 }
 
 .bg {
@@ -12,6 +13,7 @@ body {
   bottom: -50%;
   width: 200%;
   height: 200vh;
+  z-index: -1; /* Coloca el fondo detrás de los demás elementos */
   background: transparent url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
   background-repeat: repeat;
   animation: bg-animation .2s infinite;
@@ -19,19 +21,16 @@ body {
   visibility: visible;
 }
 
-@keyframes bg-animation {
-    0% { transform: translate(0,0) }
-    10% { transform: translate(-5%,-5%) }
-    20% { transform: translate(-10%,5%) }
-    30% { transform: translate(5%,-10%) }
-    40% { transform: translate(-5%,15%) }
-    50% { transform: translate(-10%,5%) }
-    60% { transform: translate(15%,0) }
-    70% { transform: translate(0,10%) }
-    80% { transform: translate(-15%,0) }
-    90% { transform: translate(10%,5%) }
-    100% { transform: translate(5%,0) }
+/* Agrega estilos para los botones o imágenes */
+/* Ejemplo de botón */
+.button {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  z-index: 1; /* Asegura que esté sobre el fondo */
+  /* Otros estilos para el botón */
 }
+
 /* Cuerpo */
 /* Estilos para .leaf */
 .leaf {
