--- a/estilos.css
+++ b/estilos.css
@@ -20,15 +20,18 @@ body {
   opacity: .9;
   visibility: visible;
 }
-
-/* Agrega estilos para los botones o imágenes */
-/* Ejemplo de botón */
-.button {
-  position: absolute;
-  top: 50px;
-  left: 50px;
-  z-index: 1; /* Asegura que esté sobre el fondo */
-  /* Otros estilos para el botón */
+@keyframes bg-animation {
+  0% { transform: translate(0,0) }
+  10% { transform: translate(-5%,-5%) }
+  20% { transform: translate(-10%,5%) }
+  30% { transform: translate(5%,-10%) }
+  40% { transform: translate(-5%,15%) }
+  50% { transform: translate(-10%,5%) }
+  60% { transform: translate(15%,0) }
+  70% { transform: translate(0,10%) }
+  80% { transform: translate(-15%,0) }
+  90% { transform: translate(10%,5%) }
+  100% { transform: translate(5%,0) }
 }
 
 /* Cuerpo */
