--- a/estilos.css
+++ b/estilos.css
@@ -1,41 +1,21 @@
+/* Estilos generales */
+
 body {
-  background-color: #5a595a;
-  margin: 0;
-  overflow-x: hidden;
-  position: relative; /* Agrega posicionamiento relativo para los elementos hijos */
+  margin: 10%; /* Elimina el margen predeterminado del cuerpo */
+}
+body {
+  background-image: url('fon1.jpg'); /* Ruta de tu imagen */
+  background-size: cover; /* Ajusta el tamaño de la imagen para cubrir toda la pantalla */
+  background-position: center; /* Centra la imagen en la pantalla */
+  /* Otras propiedades opcionales para el fondo */
+  /* background-repeat: no-repeat; */ /* Para evitar que la imagen se repita */
+  /* background-attachment: fixed; */ /* Para que la imagen de fondo se mantenga fija mientras se desplaza la página */
+  /* color: white; */ /* Cambia el color del texto para que sea legible */
 }
 
-.bg {
-  position: fixed;
-  top: -50%;
-  left: -50%;
-  right: -50%;
-  bottom: -50%;
-  width: 200%;
-  height: 200vh;
-  z-index: -1; /* Coloca el fondo detrás de los demás elementos */
-  background: transparent url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
-  background-repeat: repeat;
-  animation: bg-animation .2s infinite;
-  opacity: .9;
-  visibility: visible;
-}
-@keyframes bg-animation {
-  0% { transform: translate(0,0) }
-  10% { transform: translate(-5%,-5%) }
-  20% { transform: translate(-10%,5%) }
-  30% { transform: translate(5%,-10%) }
-  40% { transform: translate(-5%,15%) }
-  50% { transform: translate(-10%,5%) }
-  60% { transform: translate(15%,0) }
-  70% { transform: translate(0,10%) }
-  80% { transform: translate(-15%,0) }
-  90% { transform: translate(10%,5%) }
-  100% { transform: translate(5%,0) }
-}
 
-/* Cuerpo */
 /* Estilos para .leaf */
+
 .leaf {
   display: flex;
   flex-direction: column;
