--- a/estilos.css
+++ b/estilos.css
@@ -1,18 +1,8 @@
 /* Estilos generales */
 
 body {
-  margin: 10%; /* Elimina el margen predeterminado del cuerpo */
+  margin: 0; /* Elimina el margen predeterminado del cuerpo */
 }
-body {
-  background-image: url('fon1.jpg'); /* Ruta de tu imagen */
-  background-size: cover; /* Ajusta el tamaño de la imagen para cubrir toda la pantalla */
-  background-position: center; /* Centra la imagen en la pantalla */
-  /* Otras propiedades opcionales para el fondo */
-  /* background-repeat: no-repeat; */ /* Para evitar que la imagen se repita */
-  /* background-attachment: fixed; */ /* Para que la imagen de fondo se mantenga fija mientras se desplaza la página */
-  /* color: white; */ /* Cambia el color del texto para que sea legible */
-}
-
 
 /* Estilos para .leaf */
 
@@ -23,6 +13,27 @@ body {
   min-height: 100vh; /* Establece un alto mínimo para .leaf */
   margin: 0; /* Elimina el margen predeterminado */
 }
+/* Define la animación para el fondo */
+@keyframes move {
+  0% { background-position: 0% 0%; }
+  100% { background-position: 100% 100%; }
+}
+
+/* Aplica estilos para el fondo animado */
+.background {
+  /* Otros estilos para el fondo */
+  position: fixed; /* Para que el fondo esté fijo en la ventana */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Coloca el fondo en el fondo de la pila de capas */
+  background: linear-gradient(to right bottom, rgb(255, 0, 85), rgb(250, 250, 250), rgb(255, 0, 76), rgb(255, 255, 255), rgb(255, 0, 119), rgb(255, 255, 255));
+  background-size: 300% 300%; /* Tamaño del gradiente */
+  animation: move 15s linear infinite; /* Asocia la animación con el fondo */
+}
+/* Estilos para el logo */
+
 #logo {
   max-width: 800px;
   margin: 2px auto;
