--- a/estilos.css
+++ b/estilos.css
@@ -1,11 +1,42 @@
-/* Estilos generales */
 
 body {
-  margin: 0; /* Elimina el margen predeterminado del cuerpo */
+  background-color: #000000;
+  margin: 0;
+  overflow-x: hidden;
+  position: relative; /* Agrega posicionamiento relativo para los elementos hijos */
 }
 
-/* Estilos para .leaf */
+.bg {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  right: -50%;
+  bottom: -50%;
+  width: 200%;
+  height: 200vh;
+  z-index: -1; /* Coloca el fondo detrás de los demás elementos */
+  background: transparent url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
+  background-repeat: repeat;
+  animation: bg-animation .2s infinite;
+  opacity: .9;
+  visibility: visible;
+}
+@keyframes bg-animation {
+  0% { transform: translate(0,0) }
+  10% { transform: translate(-5%,-5%) }
+  20% { transform: translate(-10%,5%) }
+  30% { transform: translate(5%,-10%) }
+  40% { transform: translate(-5%,15%) }
+  50% { transform: translate(-10%,5%) }
+  60% { transform: translate(15%,0) }
+  70% { transform: translate(0,10%) }
+  80% { transform: translate(-15%,0) }
+  90% { transform: translate(10%,5%) }
+  100% { transform: translate(5%,0) }
+}
 
+/* Cuerpo */
+/* Estilos para .leaf */
 .leaf {
   display: flex;
   flex-direction: column;
@@ -13,27 +44,6 @@ body {
   min-height: 100vh; /* Establece un alto mínimo para .leaf */
   margin: 0; /* Elimina el margen predeterminado */
 }
-/* Define la animación para el fondo */
-@keyframes move {
-  0% { background-position: 0% 0%; }
-  100% { background-position: 100% 100%; }
-}
-
-/* Aplica estilos para el fondo animado */
-.background {
-  /* Otros estilos para el fondo */
-  position: fixed; /* Para que el fondo esté fijo en la ventana */
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1; /* Coloca el fondo en el fondo de la pila de capas */
-  background: linear-gradient(to right bottom, rgb(255, 0, 85), rgb(250, 250, 250), rgb(255, 0, 76), rgb(255, 255, 255), rgb(255, 0, 119), rgb(255, 255, 255));
-  background-size: 300% 300%; /* Tamaño del gradiente */
-  animation: move 15s linear infinite; /* Asocia la animación con el fondo */
-}
-/* Estilos para el logo */
-
 #logo {
   max-width: 800px;
   margin: 2px auto;
@@ -103,4 +113,33 @@ body {
 .ad-container img {
   width: 100%; /* Para asegurar que la imagen se ajuste al contenedor */
   height: auto; /* Para mantener la proporción de aspecto de la imagen */
+}
+/*-------------*/
+.contenedor {
+  position: relative; /* El contenedor es relativo para que los elementos absolutos se posicionen con respecto a él */
+  display: inline-block; /* Para que el contenedor se ajuste al tamaño de su contenido */
+}
+
+.recuadro {
+  width: 1100px; /* Anchura inicial */
+  height: 1575px; /* Altura inicial */
+  background-color: rgb(255, 0, 0); /* Color inicial (rojo) */
+  position: absolute; /* Posicionamiento absoluto */
+  bottom: -10px; /* Posición debajo de la imagen */
+  left: 50%; /* Alineación horizontal centrada */
+  transform: translateX(-50%); /* Centra el recuadro */
+  animation: cambioColor 5s infinite; /* Animación de cambio de color */
+  border-radius: .9%; /* Redondea todas las esquinas */
+}
+
+@keyframes cambioColor {
+  0% { background-color: rgb(255, 0, 149); } /* Color inicial (rojo) */
+  25% { background-color: rgb(255, 255, 255); } /* Verde */
+  50% { background-color: rgb(255, 0, 179); } /* Azul */
+  75% { background-color: rgb(255, 255, 250); } /* Amarillo */
+  100% { background-color: rgb(255, 0, 157); } /* Volver a rojo */
+}
+.post1{
+  position: relative;
+  z-index: 1; /* Coloca este elemento al frente */
 }
