--- a/estilos.css
+++ b/estilos.css
@@ -2,6 +2,7 @@
 
 body {
   margin: 0; /* Elimina el margen predeterminado del cuerpo */
+    background-color: rgb(0, 0, 0);
 }
 
 /* Estilos para .leaf */
