--- a/estilos.css
+++ b/estilos.css
@@ -47,19 +47,108 @@ body {
   color: rgb(255, 255, 255);
 }
 
-/* Estilos para las redes sociales */
+/* Estilos para las redes sociales --------1*/
 
 #redes-sociales {
-  margin: 20px 0;
+  margin: 20px 40px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+
 }
 
-.boton-red-social {
+.facebook {
+  margin: 10px;
+  position: relative;
+}
+.facebook:before,
+.facebook:after{
+  content:"";
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  width: 100px;
+  height: 100px;
+  border-radius: 10%;
+  background-color: blue;
+  opacity: 0;
+  animation: onda1 1.7s infinite;
+}
+
+.facebook:before{
+  animation-delay: 1s;
+}
+.facebook:after{
+  animation-delay: 1.3s;
+}
+
+.facebook img {
+  max-width: 150px;
+  display: block;
+  margin-bottom: 10px;
+  position: relative;
+  z-index: 2;
+}
+
+@keyframes onda1 {
+  0%{
+    transform: scale(1);
+  }
+  15%{
+    opacity: 1;
+  }
+
+  100%{
+    opacity: 0;
+    transform: scale(2.5);
+  }
+}
+/* -------------------Estilos para las redes sociales --------2*/
+
+#redes-sociales {
+  margin: 20px 40px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.instagram {
   margin: 10px;
 }
 
-.boton-red-social img {
+.instagram img {
+  max-width: 150px;
+  display: block;
+  margin-bottom: 10px;
+}
+/* Estilos para las redes sociales --------3*/
+
+#redes-sociales {
+  margin: 20px 40px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.whatsapp {
+  margin: 10px;
+}
+
+.whatsapp img {
+  max-width: 150px;
+  display: block;
+  margin-bottom: 10px;
+}
+/* Estilos para las redes sociales --------4*/
+
+#redes-sociales {
+  margin: 20px 40px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.tiktok {
+  margin: 10px;
+}
+
+.tiktok img {
   max-width: 150px;
   display: block;
   margin-bottom: 10px;
