--- a/estilos.css
+++ b/estilos.css
@@ -103,21 +103,58 @@ body {
   }
 }
 /* -------------------Estilos para las redes sociales --------2*/
-
 #redes-sociales {
   margin: 20px 40px;
   display: flex;
   justify-content: space-around;
+
 }
 
 .instagram {
   margin: 10px;
+  position: relative;
+}
+.instagram:before,
+.instagram:after{
+  content:"";
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  width: 100px;
+  height: 100px;
+  border-radius: 20%;
+  background-color: rgb(248, 3, 236);
+  opacity: 0;
+  animation: onda1 1.7s infinite;
+}
+
+.instagram:before{
+  animation-delay: 1s;
+}
+.instagram:after{
+  animation-delay: 1.3s;
 }
 
 .instagram img {
   max-width: 150px;
   display: block;
   margin-bottom: 10px;
+  position: relative;
+  z-index: 2;
+}
+
+@keyframes onda1 {
+  0%{
+    transform: scale(1);
+  }
+  15%{
+    opacity: 1;
+  }
+
+  100%{
+    opacity: 0;
+    transform: scale(2.5);
+  }
 }
 /* Estilos para las redes sociales --------3*/
 
@@ -125,16 +162,54 @@ body {
   margin: 20px 40px;
   display: flex;
   justify-content: space-around;
+
 }
 
 .whatsapp {
   margin: 10px;
+  position: relative;
+}
+.whatsapp:before,
+.whatsapp:after{
+  content:"";
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: rgb(3, 248, 3);
+  opacity: 0;
+  animation: onda1 1.7s infinite;
+}
+
+.whatsapp:before{
+  animation-delay: 1s;
+}
+.whatsapp:after{
+  animation-delay: 1.3s;
 }
 
 .whatsapp img {
   max-width: 150px;
   display: block;
   margin-bottom: 10px;
+  position: relative;
+  z-index: 2;
+}
+
+@keyframes onda1 {
+  0%{
+    transform: scale(1);
+  }
+  15%{
+    opacity: 1;
+  }
+
+  100%{
+    opacity: 0;
+    transform: scale(2.5);
+  }
 }
 /* Estilos para las redes sociales --------4*/
 
@@ -142,29 +217,54 @@ body {
   margin: 20px 40px;
   display: flex;
   justify-content: space-around;
+
 }
 
 .tiktok {
   margin: 10px;
+  position: relative;
+}
+.tiktok:before,
+.tiktok:after{
+  content:"";
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: rgb(253, 253, 253);
+  opacity: 0;
+  animation: onda1 1.7s infinite;
+}
+
+.tiktok:before{
+  animation-delay: 1s;
+}
+.tiktok:after{
+  animation-delay: 1.3s;
 }
 
 .tiktok img {
   max-width: 150px;
   display: block;
   margin-bottom: 10px;
+  position: relative;
+  z-index: 2;
 }
 
-/* Estilos para productos */
+@keyframes onda1 {
+  0%{
+    transform: scale(1);
+  }
+  15%{
+    opacity: 1;
+  }
 
-#productos {
-  font-family: serif;
-  font-weight: bold;
-  font-size: 33px;
-  color: rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
-  border-radius: 5px;
-  padding: 8px 15px;
-  margin: 15px 0px;
+  100%{
+    opacity: 0;
+    transform: scale(2.5);
+  }
 }
 /*anuncio publicitario*/
 .ad-container {
