--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,9 @@
 /* Estilos generales */
 
+body {
+  margin: 0; /* Elimina el margen predeterminado del cuerpo */
+}
+
 /* Estilos para .leaf */
 
 .leaf {
@@ -12,14 +16,10 @@
 /* Define la animación para el fondo -------------------------------------NIEVE*/
 body{
   background:black;overflow:visible;
-  margin: 0;
-  overflow-x: hidden;
   background-image: url("fon2.jpg");
-  background-attachment: fixed;
+   background-attachment: fixed;
 }
-/*-------------------------separacion fondo difuminado----------------------*/
 
-/*-------------------------separacion fondo difuminado----------------------*/
 @-moz-keyframes nieve{	
 	from{top:-40px;}
     to{top:101%;}
