--- a/estilos.css
+++ b/estilos.css
@@ -17,7 +17,8 @@ body {
 body{
   background:black;overflow:visible;
   background-image: url("fon2.jpg");
-   background-attachment: fixed;
+  background-attachment: fixed;
+  background-position: center center;
 }
 
 @-moz-keyframes nieve{	
