--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 .fondo{
   min-height: 100vh;
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/221808/sky.jpg);
+  background-image: url(1anim.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -29,17 +29,27 @@
     background-position-y: center;
     background-clip: text;
 }
+.BIENVENIDO{
+  text-align: center;
+  color:transparent;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 40px;
+  background-image: url(4.gif);
+  background-size:cover;
+  background-position-y: center;
+  background-clip: text;
+}
 .tex1{
   color: rgb(255, 0, 200);
   font-family:cursive;
 }
 .tex2{
-  color: rgb(0, 0, 0);
+  color: rgb(225, 241, 0);
   font-family: cursive;
 }
 .main{
     width: 70%;
-    background: rgb(0, 0, 0);
+    background: transparent;
     float:left;
     padding: 20px;
     box-sizing: border-box;
@@ -55,7 +65,7 @@ aside{
     background: rgb(255, 0, 0);
     padding: 20px;
     box-sizing: border-box;
-    background:rgb(248, 248, 248);
+    background:transparent;
     float: left;
     text-align: justify;
     
