--- a/estilos.css
+++ b/estilos.css
@@ -11,21 +11,21 @@
     max-width: 1000px;
     margin:0 auto;
     overflow: hidden;
- 
 }
 /*------------tabla-----------------------*/
 .contenedortabla{
-  border:solid 5px rgb(0, 124, 31);
+  width: 100%;
+  max-width: 1000px;
+  border:solid 5px rgb(255, 1, 1);
   background-color: yellow;
   margin: auto; /*centrar tabla*/
 }
 tr,td{
   color: rgb(255, 255, 255);
-  border: solid rgb(37, 0, 136);/*quitar margen a celdas*/
-
+  /*border: solid rgb(37, 0, 136);quitar margen a celdas*/
 }
 thead{
-  background: red;
+  /*background: red;*/
 }
 /*------------final----tabla-----------------------*/
 .titulo{
@@ -62,6 +62,7 @@ thead{
 .tex2{
   color: rgb(225, 241, 0);
   font-family: cursive;
+  text-align: justify;
 }
 .main{
     width: 70%;
