--- a/estilos.css
+++ b/estilos.css
@@ -11,11 +11,10 @@
     max-width: 1000px;
     margin:0 auto;
     overflow: hidden;
+ 
 }
 /*------------tabla-----------------------*/
 .contenedortabla{
-  width: 100%;
-  max-width: 1000px;
   border:solid 5px rgb(255, 1, 1);
   background-color: yellow;
   margin: auto; /*centrar tabla*/
@@ -23,9 +22,10 @@
 tr,td{
   color: rgb(255, 255, 255);
   /*border: solid rgb(37, 0, 136);quitar margen a celdas*/
+
 }
 thead{
-  /*background: red;*/
+  background: red;
 }
 /*------------final----tabla-----------------------*/
 .titulo{
