--- a/estilos.css
+++ b/estilos.css
@@ -15,8 +15,8 @@
 }
 /*------------tabla-----------------------*/
 .contenedortabla{
-  border:solid 5px rgb(255, 1, 1);
-  backdrop-filter: blur(10px); /*------poner el fondo borroso----------*/
+  background-color: rgba(2, 255, 23, 0.123);
+  backdrop-filter: blur(5px); /*------poner el fondo borroso----------*/
   margin: auto; /*centrar tabla*/
   max-width: 1000px;
   width: 100%;
@@ -84,7 +84,6 @@ thead{
 */
 aside{
     width: 30%;
-    background: rgb(255, 0, 0);
     padding: 20px;
     box-sizing: border-box;
     background:transparent;
