--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 .fondo{
   min-height: 100vh;
-  background-image: url(2nav.jpg);
+  background-image: url(amo1.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
